--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "commonjs",
   "name": "askhal",
-  "version": "0.10.2",
+  "version": "0.11.1",
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,12 +10,16 @@
   "keywords": [],
   "author": "Ed Addario",
   "license": "MIT",
-  "description": "Ask HAL is a program to query arbitrary AI models available in OpenRouter.",
+  "description": "Ask HAL: A power-user tool to interact with over 250 AI models!",
   "dependencies": {
     "openai": "^4.73.1",
     "officeparser": "^5.1.1",
     "chalk": "^4.1.2",
     "word-wrap": "^1.2.5",
     "commander": "^12.1.0"
-  }
+  },
+    "devDependencies": {
+      "mocha": "^11.0.1",
+        "chai": "^5.1.2"
+    }
 }
