--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.11.1",
   "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no tests specified\" && exit 1",
     "start": "node askhal.js"
   },
   "keywords": [],
@@ -20,6 +20,10 @@
   },
     "devDependencies": {
       "mocha": "^11.0.1",
-        "chai": "^5.1.2"
+      "@types/mocha": "^10.0.10",
+      "chai": "^5.1.2",
+      "@types/chai": "^5.0.1",
+      "chai-as-promised": "^8.0.1",
+      "@types/chai-as-promised": "^8.0.1"
     }
 }
