--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.11.1",
   "main": "",
   "scripts": {
-    "test": "echo \"Error: no tests specified\" && exit 1",
+    "test": "mocha tests",
     "start": "node askhal.js"
   },
   "keywords": [],
