--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "officeparser": "^5.1.1",
     "chalk": "^4.1.2",
     "word-wrap": "^1.2.5",
-    "commander": "^12.1.0"
+    "commander": "^12.1.0",
+    "axios": "^1.7.9",
+    "html-to-text": "^9.0.5",
+    "@types/html-to-text": "^9.0.4"
   },
     "devDependencies": {
       "mocha": "^11.0.1",
