--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "type": "commonjs",
+  "type": "module",
   "name": "askhal",
-  "version": "1.3.6",
+  "version": "1.4.2",
   "main": "",
   "scripts": {
     "test": "mocha tests",
-    "start": "node askhal.js"
     "start": "node askhal.js",
     "build": "esbuild askhal.js --bundle --minify --platform=node --outfile=./bin/askhal.cjs --format=cjs",
     "package": "pkg ./bin/askhal.cjs -t latest-macos-arm64 --out-path ./bin",
@@ -17,13 +16,10 @@
   "license": "MIT",
   "description": "Ask HAL: A power-user tool to interact with over 250 AI models!",
   "dependencies": {
-    "openai": "^4.73.1",
     "openai": "^4.79.1",
     "officeparser": "^5.1.1",
-    "chalk": "^4.1.2",
     "chalk": "^5.4.1",
     "word-wrap": "^1.2.5",
-    "commander": "^12.1.0",
     "commander": "^13.0.0",
     "axios": "^1.7.9",
     "html-to-text": "^9.0.5",
@@ -35,7 +31,6 @@
       "chai": "^5.1.2",
       "@types/chai": "^5.0.1",
       "chai-as-promised": "^8.0.1",
-      "@types/chai-as-promised": "^8.0.1"
       "@types/chai-as-promised": "^8.0.1",
       "esbuild": "^0.24.2",
       "pkg": "^5.8.1"
